# SQ-Tensor-Core

./: .gitignore  README.md
kernels/: matmul.cu  panda.cu
models/mpX-SIMD/: CMakeLists.txt  README.md  setup.py
models/mpX-SIMD/include/: hardware.hpp  processing_element.hpp  simd_engine.hpp  tile.hpp  weight_memory.hpp
models/mpX-SIMD/preprocessing/: preprocess_weights.py
models/mpX-SIMD/src/: hardware.cpp  main.cpp
models/mpX-SIMD/src/core/: processing_element.cpp  simd_engine.cpp  weight_memory.cpp
models/mpX-SIMD/src/python/: bindings.cpp
models/mpX-SIMD/tests/: test.cpp  test_mpGEMM.py
models/panda/: CMakeLists.txt  README.md  __init__.py  cli.py  interface.py  setup.py
models/panda/include/: config.hpp  pe_array.hpp  performance_metrics.hpp  processing_element.hpp  simd_engine.hpp  stats.hpp
models/panda/src/: config.cpp
models/panda/tests/: test_matmul.py  test_matmul_suite.py  test_mpGEMM.py
models/perf_model/: CMakeLists.txt  README.md  __init__.py  interface.py  setup.py
models/perf_model/include/: config.hpp  pe_array.hpp  performance_metrics.hpp  processing_element.hpp  simd_engine.hpp  stats.hpp  tile.hpp  weight_memory.hpp
models/perf_model/preprocessing/: __init__.py  preprocess_weights.py
models/perf_model/src/: config.cpp  pe_array.cpp
models/perf_model/tests/: test_matmul.py  test_synchronisation_modes.py
models/performance-model/: CMakeLists.txt  interface.py  requirements.txt  setup.py
models/performance-model/include/: config.hpp  pe_array.hpp  performance_metrics.hpp  processing_element.hpp  tile.hpp  weight_memory.hpp
models/resource-model/: pe_model.py
models/resource_model/: pe_model.py  roofline_model.py
models/spmpGEMM/: CMakeLists.txt  README.md  setup.py
models/spmpGEMM/include/: pe_array.hpp  processing_element.hpp  simd_engine.hpp  stats.hpp  tile.hpp  weight_memory.hpp
models/spmpGEMM/src/core/: processing_element.cpp  simd_engine.cpp  weight_memory.cpp
models/spmpGEMM/src/python/: bindings.cpp
models/spmpGEMM/tests/: test_mpGEMM.py
preprocessing/: README.md  chunking.py  quantise.py  sampler.py  sampler_onnx.py
scripts/: find_roofline_plot.py  maximise_zero_tiles.py  perf_estimate.py  permutation.py
scripts/sparsity/: sparsity.py  weight_distribution.py
scripts/workloads/: chunking.py
verilog/: Makefile  processing_element.sv  processing_element_array.sv  run_tests.sh
verilog/testbenches/: tb_performance.cpp  tb_processing_element.cpp  tb_verification.cpp
(+11 files in other folders)
